added more parts to remove (#2)

--- a/GameData/SimpleRealism/GavPartRemoval.cfg
+++ b/GameData/SimpleRealism/GavPartRemoval.cfg
@@ -15,7 +15,18 @@
 !PART[rotoServo_04|RotorEngine_03|RotorEngine_02|hinge_04|piston_03|largeFanBlade|largePropeller] {}
 !PART[largeHeliBlade|FanShroud_03|GearLarge|Mark1Cockpit|Mark2Cockpit|MK1CrewCabin|noseCone] {}
 !PART[wingConnector3|deltaWing|winglet|wingShuttleElevon1|wingShuttleElevon2|piston_01] {}
-
+!PART[cryoengine-stromboli-1|cryoengine-erebus-1|cryoengine-pavonis-1|cryoengine-fuji-1] {}
+!PART[cryoengine-ulysses-1|cryoengine-etna-1|cryoengine-tharsis-1|hydrogen-10-1] {}
+!PART[hydrogen-125-1|hydrogen-125-2|hydrogen-25-1|hydrogen-25-2|hydrogen-25-3|hydrogen-375-1] {}
+!PART[hydrogen-375-2|hydrogen-375-3|hydrogen-5-1|hydrogen-5-2|hydrogen-5-3|hydrogen-radial-125-1] {}
+!PART[hydrogen-radial-25-1|hydrogen-radial-375-1|dmReconLarge|dmSIGINT.End|dmSIGINT.Small] {}
+!PART[dmReconSmall|dmASERT|dmGoreSat|dmImagingPlatform|dmmagBoom|rpwsAnt|dmscope|dmSoilMoisture] {}
+!PART[dmSolarCollector|dmAnomScanner|dmBathymetry|dmbioDrill|dmDAN|dmsurfacelaser|dmRoverGoo] {}
+!PART[dmRoverMat|dmSeismicPod|dmSeismicHammer|dmXRay|dmUS2Asert|dmUS2GoreSat|dmUS2ImagingPlatform] {}
+!PART[dmUS2MagBoom|dmUS2RPWS|dmUS2Scope|dmUS2SoilMoisture|dmUS2SolarParticles|ntr-sc-125-1] {}
+!PART[ntr-sc-25-1|Engineer7500|EngineerChip|mumech_MJ2_Pod|battery-0625|battery-125|battery-25] {}
+!PART[battery-rad-125|reactor-125|reactor-25-2|reactor-25|reactor-375-2|nuclearfuel-0625] {}
+!PART[nuclearfuel-125|nuclearfuel-25|nuclear-recycler-25|rtg-0625] {}
 
 
 
