--- a/GameData/SimpleRealism/GavPartRemoval.cfg
+++ b/GameData/SimpleRealism/GavPartRemoval.cfg
@@ -27,6 +27,23 @@
 !PART[ntr-sc-25-1|Engineer7500|EngineerChip|mumech_MJ2_Pod|battery-0625|battery-125|battery-25] {}
 !PART[battery-rad-125|reactor-125|reactor-25-2|reactor-25|reactor-375-2|nuclearfuel-0625] {}
 !PART[nuclearfuel-125|nuclearfuel-25|nuclear-recycler-25|rtg-0625] {}
+!PART[nfex-antenna-deploy-wv3-1|nfex-antenna-feeder-direct-1|nfex-antenna-feeder-relay-1] {}
+!PART[nfex-antenna-phased-array-1|nfex-antenna-phased-array-2|nfex-antenna-phased-array-3] {}
+!PART[nfex-antenna-phased-single-1|nfex-antenna-phased-single-2|nfex-antenna-phased-single-3] {}
+!PART[nfex-antenna-reflector-giant-1|nfex-antenna-reflector-huge-1|nfex-antenna-reflector-large-1] {}
+!PART[nfex-antenna-reflector-side-1|nfex-antenna-reflector-side-2|nfex-antenna-reflector-side-3] {}
+!PART[nfex-antenna-relay-tdrs-1|nfex-antenna-relay-tdrs-2|nfex-antenna-relay-tiny-1] {}
+!PART[nfex-antenna-rover-1|nfex-antenna-rover-2|nfex-antenna-rover-3|nfex-antenna-static-mini-1] {}
+!PART[nfex-antenna-top-dish-1|nfex-antenna-top-dish-2|nfex-bus-adtp-1|nfex-bus-adtp-2] {}
+!PART[nfex-bus-chfr-1|nfex-bus-chfr-2|nfex-bus-cyl-1|nfex-bus-cyl-2|nfex-bus-dsk-1] {}
+!PART[nfex-bus-dsk-2|nfex-bus-hecs-1|nfex-bus-hecs-2|nfex-bus-hecs2-1|nfex-bus-hecs2-2] {}
+!PART[nfex-bus-okto-1|nfex-bus-okto-2|nfex-bus-plto-1|nfex-bus-plto-2|nfex-bus-qbe-1] {}
+!PART[nfex-bus-qbe-2|nfex-bus-rekt-1|nfex-bus-rekt-2|nfex-bus-rnd-1|nfex-bus-rnd-2] {}
+!PART[nfex-bus-sqr-1|nfex-bus-sqr-2|nfex-bus-stp-1|nfex-bus-stp-2] {}
+!PART[nfex-battery-mini-1|nfex-fueltank-radial-small-1|nfex-fueltank-radial-small-2] {}
+!PART[nfex-fueltank-radial-small-3|nfex-fueltank-radial-tiny-1|nfex-fueltank-stack-medium-1] {}
+!PART[nfex-fueltank-stack-medium-2|nfex-fueltank-stack-medium-3|nfex-fueltank-stack-tiny-1] {}
+!PART[nfex-probe-chfr-1|nfex-probe-rkt-1|nfex-probe-sqr-1|nfex-probe-stp-1|argon-0625-1] {}
 
 
 
