Added nfs and rt antennae towards #2

--- a/GameData/SimpleRealism/GavPartRemoval.cfg
+++ b/GameData/SimpleRealism/GavPartRemoval.cfg
@@ -44,7 +44,16 @@
 !PART[nfex-fueltank-radial-small-3|nfex-fueltank-radial-tiny-1|nfex-fueltank-stack-medium-1] {}
 !PART[nfex-fueltank-stack-medium-2|nfex-fueltank-stack-medium-3|nfex-fueltank-stack-tiny-1] {}
 !PART[nfex-probe-chfr-1|nfex-probe-rkt-1|nfex-probe-sqr-1|nfex-probe-stp-1|argon-0625-1] {}
-
+!PART[argon-0625-2|argon-0625-3|argon-125-1|argon-125-2|argon-125-3|argon-25-1|argon-25-2] {}
+!PART[argon-25-3|argon-radial-0625-1|argon-radial-125-1|pit-0625|pit-125|pit-25|vasimr-0625] {}
+!PART[vasimr-125|vasimr-25|lithium-0625-1|lithium-0625-2|lithium-0625-3|lithium-125-1] {}
+!PART[lithium-125-2|lithium-125-3|lithium-25-1|lithium-25-2|lithium-25-3|lithium-radial-0625-1] {}
+!PART[lithium-radial-125-1|rcsblock-gridded-01|rcsblock-hall-01|rcsblock-mpdt-quad-01] {}
+!PART[rcsblock-mpdt-quint-01|rcsblock-mpdt-single-01|rcsblock-mpdt-triple-01|rcsblock-pulsedplasma-01] {}
+!PART[cryoseperator-25|gasspectrometer-01|xenon-125-1|xenon-125-2|xenon-125-3|xenon-25-1] {}
+!PART[xenon-25-2|xenon-25-3|xenon-radial-125-1|RTGigaDish1|RTGigaDish2|RTLongAntenna2] {}
+!PART[RTLongAntenna3|RTLongDish2|RTShortAntenna1|RTShortDish2|scansat-exomars-1|noseConeAdapter] {}
+!PART[fairingSize1|fairingSize2|fairingSize3|HeatShield0|HeatShield1|HeatShield2|HeatShield3] {}
 
 
 
