added elec, engine, adapters towards #2

--- a/GameData/SimpleRealism/GavPartRemoval.cfg
+++ b/GameData/SimpleRealism/GavPartRemoval.cfg
@@ -54,7 +54,17 @@
 !PART[xenon-25-2|xenon-25-3|xenon-radial-125-1|RTGigaDish1|RTGigaDish2|RTLongAntenna2] {}
 !PART[RTLongAntenna3|RTLongDish2|RTShortAntenna1|RTShortDish2|scansat-exomars-1|noseConeAdapter] {}
 !PART[fairingSize1|fairingSize2|fairingSize3|HeatShield0|HeatShield1|HeatShield2|HeatShield3] {}
-
+!PART[mk2DroneCore|mk3Cockpit_Shuttle|probeCoreOcto2|probeCoreOcto2_v2|Decoupler_0|Decoupler_1] {}
+!PART[Decoupler_2|Decoupler_3|Separator_0|Separator_1|Separator_2|Separator_3|solarPanels1] {}
+!PART[solarPanels3largeSolarPanel|batteryPack|batteryBank|batteryBankMini|ksp_r_largeBatteryPack] {}
+!PART[batteryBankLarge|turboJet|JetEngine|turboFanSize2|turboFanEngine|smallRadialEngine_v2] {}
+!PART[liquidEngineMini_v2|toroidalAerospike|microEngine_v2|liquidEngine|liquidEngine1-2] {}
+!PART[radialLiquidEngine1-2|liquidEngine2-2_v2|engineLargeSkipper|SSME|MassiveBooster] {}
+!PART[miniJetEngine|omsEngine|RAPIER|solidBooster_v2|solidBooster_sm_v2|Size2LFB|Size3AdvancedEngine] {}
+!PART[Size3EngineCluster|solidBooster1-1|Thoroughbred|Clydesdale|sepMotor1|Shrimp|Mite] {}
+!PART[adapterMk3-Mk2|adapterEngines|adapterMk3-Size2|adapterMk3-Size2Slant] {}
+!PART[adapterSize2-Size1|adapterSize2-Size1Slant|adapterSize3-Mk3|externalTankCapsule] {}
+!PART[externalTankRound|externalTankToroid|miniFuelTank|miniFuselage] {}
 
 
 
