Added science,tanks,adapters for #2

--- a/GameData/SimpleRealism/GavPartRemoval.cfg
+++ b/GameData/SimpleRealism/GavPartRemoval.cfg
@@ -65,6 +65,18 @@
 !PART[adapterMk3-Mk2|adapterEngines|adapterMk3-Size2|adapterMk3-Size2Slant] {}
 !PART[adapterSize2-Size1|adapterSize2-Size1Slant|adapterSize3-Mk3|externalTankCapsule] {}
 !PART[externalTankRound|externalTankToroid|miniFuelTank|miniFuselage] {}
+!PART[mk2SpacePlaneAdapter|mk2FuselageLongLFO|mk3CrewCabin|mk3FuselageLFO_100] {}
+!PART[mk3FuselageLFO_25|mk3FuselageLFO_50|mk3FuselageLF_100|mk3FuselageLF_25|mk3FuselageLF_50] {}
+!PART[mk3FuselageMONO|RCSTank1-2|rcsTankMini|RCSFuelTank|radialRCSTank|rcsTankRadialLong] {}
+!PART[Rockomax16_BW|Rockomax32_BW|Rockomax64_BW|Rockomax8BW|fuelTankSmallFlat|fuelTankSmall] {}
+!PART[fuelTank|fuelTank_long|Size3LargeTank|Size3MediumTank|Size3SmallTank|xenonTank] {}
+!PART[xenonTankLarge|xenonTankRadial|InfraredTelescope|HECS2_ProbeCore|LgRadialSolarPanel] {}
+!PART[ISRU|LargeTank|MiniISRU|OrbitalScanner|RadialOreTank|SmallTank|SurfaceScanner] {}
+!PART[SurveyScanner|sensorAtmosphere|GooExperiment|Large_Crewed_Lab|ScienceBox] {}
+!PART[sensorAccelerometer|sensorBarometer|sensorGravimeter|sensorThermometer] {}
+!PART[adapterSmallMiniShort|adapterSmallMiniTall|MK1Fuselage|Mk1FuselageStructural] {}
+!PART[Size3to2Adapter|Size3To2Adapter_v2|trussAdapter|trussPiece1x|trussPiece3x] {}
+!PART[mk3CargoBayL|mk3CargoBayM|mk3CargoRamp|mk3CargoBayS|parachuteSingle] {}
 
 
 
