Penultimate addition towards #2

--- a/GameData/SimpleRealism/GavPartRemoval.cfg
+++ b/GameData/SimpleRealism/GavPartRemoval.cfg
@@ -77,6 +77,11 @@
 !PART[adapterSmallMiniShort|adapterSmallMiniTall|MK1Fuselage|Mk1FuselageStructural] {}
 !PART[Size3to2Adapter|Size3To2Adapter_v2|trussAdapter|trussPiece1x|trussPiece3x] {}
 !PART[mk3CargoBayL|mk3CargoBayM|mk3CargoRamp|mk3CargoBayS|parachuteSingle] {}
-
+!PART[radialDrogue|parachuteLarge|parachuteRadial|parachuteRadialMedium] {}
+!PART[parachuteRadialSmall|parachuteDrogue|largeAdapter|largeAdapter2|omsEngine] {}
+!PART[fuelTank3-2|fuelTankSmallFlat|fuelTankSmall|fuelTank|fuelTank_long|fuelTank2-2] {}
+!PART[fuelTank1-2|fuelTank4-2|HECS2_ProbeCore|adapterSmallMiniShort|adapterSmallMiniTall] {}
+!PART[stackSeparator|stackSeparatorMini|stackSeparatorBig|decoupler1-2|largeAdapter2] {}
+!PART[largeAdapter|RobotArmScanner_S1|RobotArmScanner_S2|RobotArmScanner_S3] {}
 
 
