Closes #2 - final parts added

--- a/GameData/SimpleRealism/GavPartRemoval.cfg
+++ b/GameData/SimpleRealism/GavPartRemoval.cfg
@@ -83,5 +83,10 @@
 !PART[fuelTank1-2|fuelTank4-2|HECS2_ProbeCore|adapterSmallMiniShort|adapterSmallMiniTall] {}
 !PART[stackSeparator|stackSeparatorMini|stackSeparatorBig|decoupler1-2|largeAdapter2] {}
 !PART[largeAdapter|RobotArmScanner_S1|RobotArmScanner_S2|RobotArmScanner_S3] {}
-
-
+!PART[ntr-gc-25-1|ntr-sc-125-1|mk2FuselageShortMono|mk2FuselageShortLFO|mk2FuselageShortLiquid] {}
+!PART[ntr-sc-25-1|ntr-sc-375-1|largeSolarPanel|solarPanels3] {}
+!PART[ionEngine|ionXenon-0625-2|ionXenon-0625-3|ionArgon-0625-2|ionArgon-0625-3] {}
+!PART[mpdt-125|mpdt-25|mpdt-25-2|InflatableHeatShield|radialDecoupler1-2] {}
+!PART[capacitor-25|capacitor-rad-0625|capacitor-0625|capacitor-rad-0625-2] {}
+!PART[probeCoreSphere_v2|nfex-probe-rnd-1|probeCoreCube|nfex-probe-plto-1|probeCoreOcto_v2|probeCoreHex_v2] {}
+!PART[nfex-probe-dsk-1|nfex-probe-cyl-1|probeStackSmall|probeStackLarge] {}
