Second commit towards #14

--- a/GameData/SimpleRealism/GavTechTreeUpgradeNodes.cfg
+++ b/GameData/SimpleRealism/GavTechTreeUpgradeNodes.cfg
@@ -211,3 +211,117 @@ PART
     manufacturer = GTT
     description = Typical 2060 Engine and RCS Upgrades. Methalox Lower Stage ISPVac: +4s and TWR: +13%
 }
+PART
+{
+    name = nukeEngineUpgrade1985
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Engine/liquidEngineLV-N/model
+    }
+
+	TechRequired = nukerocketry1985
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 1985 Nuclear Engine Upgrade
+    manufacturer = GTT
+    description = Typical 1985 Nuclear Engine Upgrades. Vacuum LH2 Engine ISPVac: +45s and TWR: +62.5%
+}
+PART
+{
+    name = nukeEngineUpgrade1995
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Engine/liquidEngineLV-N/model
+    }
+
+	TechRequired = nukerocketry1995
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 1995 Nuclear Engine Upgrade
+    manufacturer = GTT
+    description = Typical 1995 Nuclear Engine Upgrades. Vacuum LH2 Engine ISPVac: +45s and TWR: +73.1%
+}
+PART
+{
+    name = nukeEngineUpgrade2005
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Engine/liquidEngineLV-N/model
+    }
+
+	TechRequired = nukerocketry2005
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2005 Nuclear Engine Upgrade
+    manufacturer = GTT
+    description = Typical 2005 Nuclear Engine Upgrades. Vacuum LH2 Engine ISPVac: +40s and TWR: +88.9%
+}
+PART
+{
+    name = nukeEngineUpgrade2020
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Engine/liquidEngineLV-N/model
+    }
+
+	TechRequired = nukerocketry2020
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2020 Nuclear Engine Upgrade
+    manufacturer = GTT
+    description = Typical 2020 Nuclear Engine Upgrades. Vacuum LH2 Engine ISPVac: +50s and TWR: +29.4%
+}
+PART
+{
+    name = nukeEngineUpgrade2040
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Engine/liquidEngineLV-N/model
+    }
+
+	TechRequired = nukerocketry2040
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2040 Nuclear Engine Upgrade
+    manufacturer = GTT
+    description = Typical 2040 Nuclear Engine Upgrades. Vacuum LH2 Engine ISPVac: +60s and TWR: +27.2%
+}
+PART
+{
+    name = nukeEngineUpgrade2060
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Engine/liquidEngineLV-N/model
+    }
+
+	TechRequired = nukerocketry2060
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2060 Nuclear Engine Upgrade
+    manufacturer = GTT
+    description = Typical 2060 Nuclear Engine Upgrades. Vacuum LH2 Engine ISPVac: +70s and TWR: +21.4%
+}
