Second commit towards #15

--- a/GameData/SimpleRealism/GavTechTreePartPlacement.cfg
+++ b/GameData/SimpleRealism/GavTechTreePartPlacement.cfg
@@ -88,4 +88,60 @@
 	@TechRequired = eng2020
 }
 
+// ----------------------------------------
+// Moving parts from other nodes - experimental aerodynamics
+// ----------------------------------------
 
+@PART[GearSmall|wingShuttleDelta|wingShuttleElevon1|wingShuttleElevon2|wingShuttleRudder|wingShuttleStrake]:FOR[GavTechTree]
+{
+	@TechRequired = capsules1995
+}
+
+// ----------------------------------------
+// Moving parts from other nodes - landing
+// ----------------------------------------
+
+@PART[landingLeg1-2|landingLeg1|SmallGearBay]:FOR[GavTechTree]
+{
+	@TechRequired = capsules1965
+}
+
+// ----------------------------------------
+// Moving parts from other nodes - advanced landing
+// ----------------------------------------
+
+@PART[rotor_01|rotor_01s]:FOR[GavTechTree]
+{
+	@TechRequired = eng2020
+}
+
+// ----------------------------------------
+// Moving parts from other nodes - heavy landing
+// ----------------------------------------
+
+@PART[GearLarge|GearMedium]:FOR[GavTechTree]
+{
+	@TechRequired = capsules1980
+}
+@PART[InflatableHeatShield]:FOR[GavTechTree]
+{
+	@TechRequired = capsules2005
+}
+
+// Move the ion egnines
+@PART[ionXenon-0625-4]:FOR[GavTechTree]
+{
+	@TechRequired = ionPropulsion2020
+}
+@PART[ionXenon-0625-3]:FOR[GavTechTree]
+{
+	@TechRequired = ionPropulsion2040
+}
+@PART[ionXenon-0625-5]:FOR[GavTechTree]
+{
+	@TechRequired = ionPropulsion2060
+}
+@PART[piston_04|piston_02|hinge_03_s|hinge_03|rotoServo_03|rotoServo_02|rotoServo_00|hinge_01_s]:FOR[GavTechTree]
+{
+	@TechRequired = eng1975
+}
