Another commit towards #15

--- a/GameData/SimpleRealism/GavTechTreeUpgradeNodes.cfg
+++ b/GameData/SimpleRealism/GavTechTreeUpgradeNodes.cfg
@@ -325,3 +325,174 @@ PART
     manufacturer = GTT
     description = Typical 2060 Nuclear Engine Upgrades. Vacuum LH2 Engine ISPVac: +70s and TWR: +21.4%
 }
+PART
+{
+    name = elecEngineUpgrade1995
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Engine/ionEngine/model
+    }
+
+	TechRequired = ionPropulsion1995
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 1995 Electrical Propulsion Upgrade
+    manufacturer = GTT
+    description = Typical Electrical Propulsion Upgrades. Xenon ISPVac: +300s, TWR: +33.3%, EC/s/kN +18.75%
+}
+PART
+{
+    name = elecEngineUpgradeP2005
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Engine/ionEngine/model
+    }
+
+	TechRequired = plasma2005
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2005 Argon Propulsion Upgrade
+    manufacturer = GTT
+    description = Typical Argon Propulsion Upgrades. Argon ISPVac: +750s, TWR: +16.67%, EC/s/kN +16.67%
+}
+PART
+{
+    name = elecEngineUpgradeX2005
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Engine/ionEngine/model
+    }
+
+	TechRequired = ionPropulsion2005
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2005 Xenon Propulsion Upgrade
+    manufacturer = GTT
+    description = Typical Xenon Propulsion Upgrades. Xenon ISPVac: +300s, TWR: +25%, EC/s/kN +15.7%
+}
+PART
+{
+    name = elecEngineUpgradeP2020
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Engine/ionEngine/model
+    }
+
+	TechRequired = plasma2020
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2020 Argon and Lithium Propulsion Upgrade
+    manufacturer = GTT
+    description = Typical Argon and Lithium Propulsion Upgrades. Argon ISPVac: +550s, TWR: +14.2%, EC/s/kN +14.2%. Lithium ISPVac: +4500s, TWR: +25%, EC/s/kN +8.3%
+}
+PART
+{
+    name = elecEngineUpgradeX2020
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Engine/ionEngine/model
+    }
+
+	TechRequired = ionPropulsion2020
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2020 Xenon Propulsion Upgrade
+    manufacturer = GTT
+    description = Typical Xenon Propulsion Upgrades. Xenon ISPVac: +400s, TWR: +10%, EC/s/kN +9.1%
+}
+PART
+{
+    name = elecEngineUpgradeP2040
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Engine/ionEngine/model
+    }
+
+	TechRequired = plasma2040
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2040 Argon and Lithium Propulsion Upgrade
+    manufacturer = GTT
+    description = Typical Argon and Lithium Propulsion Upgrades. Argon ISPVac: +600s, TWR: +12.5%, EC/s/kN +12.5%. Lithium ISPVac: +2500s, TWR: +20%, EC/s/kN +7.7%
+}
+PART
+{
+    name = elecEngineUpgradeX2040
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Engine/ionEngine/model
+    }
+
+	TechRequired = ionPropulsion2040
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2040 Xenon Propulsion Upgrade
+    manufacturer = GTT
+    description = Typical Xenon Propulsion Upgrades. Xenon ISPVac: +400s, TWR: +9.1%, EC/s/kN +8.3%
+}
+PART
+{
+    name = elecEngineUpgradeP2060
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Engine/ionEngine/model
+    }
+
+	TechRequired = plasma2060
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2060 Argon and Lithium Propulsion Upgrade
+    manufacturer = GTT
+    description = Typical Argon and Lithium Propulsion Upgrades. Argon ISPVac: +850s, TWR: +11.1%, EC/s/kN +11.1%. Lithium ISPVac: +2500s, TWR: +16.7%, EC/s/kN +7.1%
+}
+PART
+{
+    name = elecEngineUpgradeX2060
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Engine/ionEngine/model
+    }
+
+	TechRequired = ionPropulsion2060
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2060 Xenon Propulsion Upgrade
+    manufacturer = GTT
+    description = Typical Xenon Propulsion Upgrades. Xenon ISPVac: +400s, TWR: +8.3%, EC/s/kN +7.7%
+}
