Another commit towards #14

--- a/GameData/SimpleRealism/GavTechTreePartPlacement.cfg
+++ b/GameData/SimpleRealism/GavTechTreePartPlacement.cfg
@@ -145,3 +145,38 @@
 {
 	@TechRequired = eng1975
 }
+
+
+// ----------------------------------------
+// Moving parts from other nodes - Capsules Branch
+// ----------------------------------------
+
+@PART[RC_cone_double|RC_stack|RC_radial|proceduralHeatshield|proceduralNoseCone]:FOR[GavTechTree]
+{
+	@TechRequired = tech1955
+}
+@PART[asasmodule1-2|advSasModule|sasModule]:FOR[GavTechTree]
+{
+	@TechRequired = eng1970
+}
+!PART[avionicsNoseCone|cupola|roverBody_v2|MiniDrill|RadialDrill|FuelCell|FuelCellArray|proceduralTankOre] {}
+@PART[GearLarge|GearMedium]:FOR[GavTechTree]
+{
+	@TechRequired = capsules1995
+}
+@PART[mk1pod_v2|LaunchEscapeSystem]:FOR[GavTechTree]
+{
+	@TechRequired = capsules1960
+}
+@PART[tailfin|Mark1Cockpit|Mark2Cockpit|SmallGearBay]:AFTER[GavTechTree]
+{
+	@TechRequired = capsules1995
+}
+@PART[seatExternalCmd|landerCabinSmall|telescopicLadder|telescopicLadderBay|ladder1]:FOR[GavTechTree]
+{
+	@TechRequired = capsules1965
+}
+@PART[vernierEngine|radialDecoupler|radialDecoupler2]:FOR[GavTechTree]
+{
+	@TechRequired = tech1955
+}
