Added tanks for #15

--- a/GameData/SimpleRealism/GavTechTreeUpgradeNodes.cfg
+++ b/GameData/SimpleRealism/GavTechTreeUpgradeNodes.cfg
@@ -496,3 +496,155 @@ PART
     manufacturer = GTT
     description = Typical Xenon Propulsion Upgrades. Xenon ISPVac: +400s, TWR: +8.3%, EC/s/kN +7.7%
 }
+PART
+{
+    name = tankUpgrade1955
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/FuelTank/RockomaxTanks/Assets/Rockomax32
+    }
+
+	TechRequired = tech1955
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 1955 Fuel Tank Upgrade
+    manufacturer = GTT
+    description = Typical Fuel Tank Upgrades.
+}
+PART
+{
+    name = tankUpgrade1965
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/FuelTank/RockomaxTanks/Assets/Rockomax32
+    }
+
+	TechRequired = eng1965
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 1965 Fuel Tank Upgrade
+    manufacturer = GTT
+    description = Typical Fuel Tank Upgrades.
+}
+PART
+{
+    name = tankUpgrade1970
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/FuelTank/RockomaxTanks/Assets/Rockomax32
+    }
+
+	TechRequired = fuel1970
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 1970 Fuel Tank Upgrade
+    manufacturer = GTT
+    description = Typical Fuel Tank Upgrades.
+}
+PART
+{
+    name = tankUpgrade1980
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/FuelTank/RockomaxTanks/Assets/Rockomax32
+    }
+
+	TechRequired = fuel1980
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 1980 Fuel Tank Upgrade
+    manufacturer = GTT
+    description = Typical Fuel Tank Upgrades.
+}
+PART
+{
+    name = tankUpgrade1995
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/FuelTank/RockomaxTanks/Assets/Rockomax32
+    }
+
+	TechRequired = fuel1995
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 1995 Fuel Tank Upgrade
+    manufacturer = GTT
+    description = Typical Fuel Tank Upgrades.
+}
+PART
+{
+    name = tankUpgrade2020
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/FuelTank/RockomaxTanks/Assets/Rockomax32
+    }
+
+	TechRequired = fuel2020
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2020 Fuel Tank Upgrade
+    manufacturer = GTT
+    description = Typical Fuel Tank Upgrades.
+}
+PART
+{
+    name = tankUpgrade2040
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/FuelTank/RockomaxTanks/Assets/Rockomax32
+    }
+
+	TechRequired = fuel2040
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2040 Fuel Tank Upgrade
+    manufacturer = GTT
+    description = Typical Fuel Tank Upgrades.
+}
+PART
+{
+    name = tankUpgrade2060
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/FuelTank/RockomaxTanks/Assets/Rockomax32
+    }
+
+	TechRequired = fuel2060
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2060 Fuel Tank Upgrade
+    manufacturer = GTT
+    description = Typical Fuel Tank Upgrades.
+}
