Another commit towards #14

--- a/GameData/SimpleRealism/GavTechTreePartPlacement.cfg
+++ b/GameData/SimpleRealism/GavTechTreePartPlacement.cfg
@@ -180,3 +180,32 @@
 {
 	@TechRequired = tech1955
 }
+
+// ----------------------------------------
+// Moving parts from other nodes - Probes and Science Branches
+// ----------------------------------------
+
+@PART[structuralMiniNode|fuelLine|proceduralStructural]:FOR[GavTechTree]
+{
+	@TechRequired = eng1960
+}
+@PART[GrapplingDevice] 
+{
+	@TechRequired = eng1995
+}
+@PART[wheelMed|roverWheelXL3|stackBiCoupler_v2|stackTriCoupler_v2|stackQuadCoupler|adapterLargeSmallBi|adapterLargeSmallTri|adapterLargeSmallQuad]:FOR[GavTechTree]
+{
+	@TechRequired = eng1985
+}
+@PART[roverWheel1]:FOR[GavTechTree]
+{
+	@TechRequired = capsules1965
+}
+@PART[roverWheel3|roverWheel2|miniLandingLeg]:FOR[GavTechTree]
+{
+	@TechRequired = electrics1965
+}
+@PART[radPanelSm|radPanelEdge|radPanelLg]:FOR[GavTechTree]
+{
+	@TechRequired = electrics1970
+}
