Another commit towards #15

--- a/GameData/SimpleRealism/GavTechTreeUpgradeNodes.cfg
+++ b/GameData/SimpleRealism/GavTechTreeUpgradeNodes.cfg
@@ -648,3 +648,79 @@ PART
     manufacturer = GTT
     description = Typical Fuel Tank Upgrades.
 }
+PART
+{
+    name = tankUpgradeElec1995
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/FuelTank/xenonTankLarge/model
+    }
+
+	TechRequired = ionPropulsion1995
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 1995 Electrical Propulsion Fuel Tank Upgrade
+    manufacturer = GTT
+    description = Typical Electrical Propulsion Fuel Tank Upgrades.
+}
+PART
+{
+    name = tankUpgradeElec2020
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/FuelTank/xenonTankLarge/model
+    }
+
+	TechRequired = ionPropulsion2020
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2020 Electrical Propulsion Fuel Tank Upgrade
+    manufacturer = GTT
+    description = Typical Electrical Propulsion Fuel Tank Upgrades.
+}
+PART
+{
+    name = tankUpgradeElec2040
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/FuelTank/xenonTankLarge/model
+    }
+
+	TechRequired = ionPropulsion2040
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2040 Electrical Propulsion Fuel Tank Upgrade
+    manufacturer = GTT
+    description = Typical Electrical Propulsion Fuel Tank Upgrades.
+}
+PART
+{
+    name = tankUpgradeElec2060
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/FuelTank/xenonTankLarge/model
+    }
+
+	TechRequired = ionPropulsion2060
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2060 Electrical Propulsion Fuel Tank Upgrade
+    manufacturer = GTT
+    description = Typical Electrical Propulsion Fuel Tank Upgrades.
+}
