Another commit towards #14

--- a/GameData/SimpleRealism/GavTechTreePartPlacement.cfg
+++ b/GameData/SimpleRealism/GavTechTreePartPlacement.cfg
@@ -209,3 +209,19 @@
 {
 	@TechRequired = electrics1970
 }
+@PART[foldingRadSmall|foldingRadMed|foldingRadLarge]:FOR[GavTechTree]
+{
+	@TechRequired = electrics1980
+}
+@PART[dockingPort2|spotLight1|spotLight2]:FOR[GavTechTree]
+{
+	@TechRequired = capsules1960
+}
+@PART[dockingPort1]:FOR[GavTechTree]
+{
+	@TechRequired = eng2005
+}
+@PART[dockingPortLateral|*ipPad|*ipStrip]:FOR[GavTechTree]
+{
+	@TechRequired = eng1980
+}
