Closes #14 - part placement in tree

--- a/GameData/SimpleRealism/GavTechTreePartPlacement.cfg
+++ b/GameData/SimpleRealism/GavTechTreePartPlacement.cfg
@@ -209,19 +209,19 @@
 {
 	@TechRequired = electrics1970
 }
-@PART[foldingRadSmall|foldingRadMed|foldingRadLarge]:FOR[GavTechTree]
+@PART[launchClamp1]:FOR[GavTechTree]
 {
-	@TechRequired = electrics1980
+	@TechRequired = start
 }
-@PART[dockingPort2|spotLight1|spotLight2]:FOR[GavTechTree]
+@PART[stackPoint1|dockingPortLarge|stationHub]:FOR[GavTechTree]
 {
-	@TechRequired = capsules1960
+	@TechRequired = capsules1980
 }
-@PART[dockingPort1]:FOR[GavTechTree]
+@PART[dockingPort3]:FOR[GavTechTree]
 {
-	@TechRequired = eng2005
+	@TechRequired = probes1970
 }
-@PART[dockingPortLateral|*ipPad|*ipStrip]:FOR[GavTechTree]
+@PART[ServiceBay*|Kz*|RSB*|SSTU*]:FOR[GavTechTree]
 {
-	@TechRequired = eng1980
+	@TechRequired = eng1960
 }
