Batteries upgrades for #15

--- a/GameData/SimpleRealism/GavTechTreeUpgradeNodes.cfg
+++ b/GameData/SimpleRealism/GavTechTreeUpgradeNodes.cfg
@@ -648,3 +648,98 @@ PART
     manufacturer = GTT
     description = Typical Fuel Tank Upgrades.
 }
+PART
+{
+    name = battUpgrade1965
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Electrical/z-100Battery/model
+    }
+
+	TechRequired = electrics1965
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 1965 Battery Upgrade
+    manufacturer = GTT
+    description = Typical Battery Capacity and Density Upgrades.
+}
+PART
+{
+    name = battUpgrade1970
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Electrical/z-100Battery/model
+    }
+
+	TechRequired = electrics1970
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 1970 Battery Upgrade
+    manufacturer = GTT
+    description = Typical Battery Capacity and Density Upgrades.
+}
+PART
+{
+    name = battUpgrade1975
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Electrical/z-100Battery/model
+    }
+
+	TechRequired = electrics1975
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 1975 Battery Upgrade
+    manufacturer = GTT
+    description = Typical Battery Capacity and Density Upgrades.
+}
+PART
+{
+    name = battUpgrade1980
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Electrical/z-100Battery/model
+    }
+
+	TechRequired = electrics1980
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 1980 Battery Upgrade
+    manufacturer = GTT
+    description = Typical Battery Capacity and Density Upgrades.
+}
+PART
+{
+    name = battUpgrade1985
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Electrical/z-100Battery/model
+    }
+
+	TechRequired = electrics1985
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 1985 Battery Upgrade
+    manufacturer = GTT
+    description = Typical Battery Capacity and Density Upgrades.
+}
