Closes #15 - tech tree upgrade nodes

--- a/GameData/SimpleRealism/GavTechTreeUpgradeNodes.cfg
+++ b/GameData/SimpleRealism/GavTechTreeUpgradeNodes.cfg
@@ -743,3 +743,98 @@ PART
     manufacturer = GTT
     description = Typical Battery Capacity and Density Upgrades.
 }
+PART
+{
+    name = battUpgrade1995
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Electrical/z-100Battery/model
+    }
+
+	TechRequired = electrics1995
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 1995 Battery Upgrade
+    manufacturer = GTT
+    description = Typical Battery Capacity and Density Upgrades.
+}
+PART
+{
+    name = battUpgrade2005
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Electrical/z-100Battery/model
+    }
+
+	TechRequired = electrics2005
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2005 Battery Upgrade
+    manufacturer = GTT
+    description = Typical Battery Capacity and Density Upgrades.
+}
+PART
+{
+    name = battUpgrade2020
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Electrical/z-100Battery/model
+    }
+
+	TechRequired = electrics2020
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2020 Battery Upgrade
+    manufacturer = GTT
+    description = Typical Battery Capacity and Density Upgrades.
+}
+PART
+{
+    name = battUpgrade2040
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Electrical/z-100Battery/model
+    }
+
+	TechRequired = electrics2040
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2040 Battery Upgrade
+    manufacturer = GTT
+    description = Typical Battery Capacity and Density Upgrades.
+}
+PART
+{
+    name = battUpgrade2060
+	module = Part
+    author = GavinIRL (config) Porkjet (model?)
+
+    MODEL
+    {
+        model = Squad/Parts/Electrical/z-100Battery/model
+    }
+
+	TechRequired = electrics2060
+	entryCost = 0
+    cost = 0
+    category = none
+    title = 2060 Battery Upgrade
+    manufacturer = GTT
+    description = Typical Battery Capacity and Density Upgrades.
+}
